# merlin2-hospital-patrolling-EvamGonzalez22

./: .gitignore
merlin/: readmeMerlin.md
merlin/launch/: hospital_patrolling.launch.py  hospital_patrolling2.launch.py
merlin/merlin2_hospital_patrolling/: merlin2_room_patrol_fsm_action.py  merlin2_room_patrol_mission_node.py
merlin/params/: stretcher_room_waypoints.yaml
p2/: comportamientoEj2.xml  p2.md
p2/src/bt_robot/: CMakeLists.txt  package.xml
p2/src/bt_robot/src/: main.cpp
p3/: Practicas_Cognitivos_Laboratorio2.txt
p3/PDDL-course/: respuestas_practica2.md
p3/PDDL-course/Examples/Exercise1/Exercise1_G/: domain_ext.pddl  plan_ext.txt  plan_ext2.txt  problem_ext.pddl
p3/PDDL-course/Exercise4_Nav/: domain_nav.pddl  plan_nav.txt  problem_nav.pddl
p3/PDDL-course/Exercise5_Session4/: plan_session4.txt  robot_domain.pddl  robot_problem.pddl
yasmin/: P1Readme.md
yasmin/copiaPractFinalRoser/: README2.md
yasmin/copiaPractFinalRoser/practicaFinalRoSer/: readme.md
yasmin/copiaPractFinalRoser/practicaFinalRoSer/pruebaAudio/: pruebamicro.py  pruebavoz.py
yasmin/copiaPractFinalRoser/practicaFinalRoSer/src/practicas_nav_pkg/: CMakeLists.txt  package.xml
yasmin/copiaPractFinalRoser/practicaFinalRoSer/src/practicas_nav_pkg/config/: nav2_params.yaml  waypoints.yaml
yasmin/copiaPractFinalRoser/practicaFinalRoSer/src/practicas_nav_pkg/launch/: casaModerna.launch.py
yasmin/copiaPractFinalRoser/practicaFinalRoSer/src/practicas_nav_pkg/maps/: map.pgm  map.yaml
yasmin/copiaPractFinalRoser/practicaFinalRoSer/src/practicas_nav_pkg/src/: analizador_camino.py  controlador_voz.py  navegador_fsm.py  navegador_puntos.py
