<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>practicas_nav_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="egonzh04@estudiantes.unileon.es">evagonz</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-gtts</exec_depend>
  <exec_depend>python3-speechrecognition</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
